--- a/css/style.css
+++ b/css/style.css
@@ -461,7 +461,7 @@ float:left;
 .first-s .square {
     width: 200px;
     height: 200px;
-    border: 15px solid white;
+    border: 15px solid  #e0ffff;
     position: absolute;
     top: 77px;
     right: 41px;
